add some changes

--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ POSTGRES_PASSWORD=npg_XMNgIy1Kca9R
 POSTGRES_DATABASE=neondb
 POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_XMNgIy1Kca9R@ep-empty-glade-a2nckb6r-pooler.eu-central-1.aws.neon.tech/neondb
 POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_XMNgIy1Kca9R@ep-empty-glade-a2nckb6r-pooler.eu-central-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
+
+NEXT_PUBLIC_API_URL=/api
